新增了UserService，并且做了测试

--- a/Newswork/src/propert.properties
+++ b/Newswork/src/propert.properties
@@ -3,7 +3,7 @@ hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.format_sql=true
 javax.persistence.validation.mode=none
 driverClassName=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/spring
+url=jdbc:mysql://localhost:3306/newswork
 name=root
 password=123456
-packagesToScan=/ssh
+packagesToScan=/Entity
