--- a/Newswork/.settings/com.genuitec.eclipse.core.prefs
+++ b/Newswork/.settings/com.genuitec.eclipse.core.prefs
@@ -1,6 +1,6 @@
-clsCnt=24
+clsCnt=25
 eclipse.preferences.version=1
-locCnt=884
+locCnt=976
 pkgCnt=6
-sTime=2018\u5E749\u670813\u65E5 \u661F\u671F\u56DB \u4E0A\u534809\u65F644\u520654\u79D2 CST
+sTime=2018\u5E749\u670825\u65E5 \u661F\u671F\u4E8C \u4E0B\u534809\u65F657\u520646\u79D2 CST
 srcCnt=1
