--- a/Newswork/.settings/com.genuitec.eclipse.core.prefs
+++ b/Newswork/.settings/com.genuitec.eclipse.core.prefs
@@ -1,6 +1,6 @@
-clsCnt=25
+clsCnt=26
 eclipse.preferences.version=1
-locCnt=976
+locCnt=1247
 pkgCnt=6
-sTime=2018\u5E749\u670825\u65E5 \u661F\u671F\u4E8C \u4E0B\u534809\u65F657\u520646\u79D2 CST
+sTime=2018\u5E7410\u670812\u65E5 \u661F\u671F\u4E94 \u4E0B\u534802\u65F612\u520633\u79D2 CST
 srcCnt=1
